--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
                 "path": "./themes/concentricity-color-theme.json"
             }
         ]
-    }
+    },
+    "publisher": "nateburnett"
 }
